<resources>
    <string name="app_name">Workout</string>
    <string name="workout_Schedule">Workout Schedule</string>
    <string name="about">About</string>
    <string name="ppl">PPL (Push, Pull, Legs)</string>
    <string name="strong">Strong Lifts</string>
    <string name="cardio">Cardio</string>
    <string name="goals">Goals</string>
    <string name="goal">Goal</string>
    <string name="addGoal">Add Goal</string>
    <string name="met">Met</string>
    <string name="desired">Desired</string>
    <string name="workout_Categories">Workout Categories</string>
    <string name="pushA">Push A</string>
    <string name="pullA">Pull A</string>
    <string name="legsA">legs A</string>
    <string name="selectProgram">Select Your program</string>
    <string name="legsTitle">Legs: Quads, Hamstrings</string>
    <string name="pushTitle">Push: Chest, Shoulders, Triceps</string>
    <string name="pullTitle">Pull: Back, Biceps</string>
    <string name="Cardio">Cardio Programs</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
