<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.workout.WorkoutGoal">

    <TextView
        android:id="@+id/goalTitle"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/goals"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/goal"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalTitle"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/metText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/met"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/desiredText"
        app:layout_constraintStart_toEndOf="@+id/goalText"
        app:layout_constraintTop_toBottomOf="@+id/goalTitle"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="144dp" />

    <TextView
        android:id="@+id/desiredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/desired"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalTitle"
        android:layout_marginRight="32dp" />

    <EditText
        android:id="@+id/goalName"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Goal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalText"
        android:layout_marginLeft="32dp" />

    <EditText
        android:id="@+id/metGoal"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/goalName"
        app:layout_constraintTop_toBottomOf="@+id/metText"
        android:layout_marginLeft="14dp" />

    <EditText
        android:id="@+id/desiredGoal"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desiredText"
        android:layout_marginRight="31dp" />

    <TextView
        android:id="@+id/slashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:text="/"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/metText"
        app:layout_constraintTop_toBottomOf="@+id/goalTitle"
        android:layout_marginLeft="14dp" />
</android.support.constraint.ConstraintLayout>
